Subject to the jsbg flag.

More secure handling of temp files; there's no need to manually add the sticky
bit to a custom directory any more.

Mutation observers call their functions as microtasks.

Run html scripts (not deferred or async) when you see them, not after browse.

Implement some of the css shorthand properties, such as margin.

3.8.15

The lsr (imap) and lsc (irc) commands.

Migrate from quickjs to quickjs-ng.
The latter is preferred by most distributions, but we support both.
Use flags at build time to switch between the two. See README.

Rerender quickly after browse then throttle back to the rr_interval.

3.8.14

ls commands in envelope mode, or when reading an email.

Fix bug in imap download of large emails.

Support for the icloud imap server,
which implements a stricter adherence to the standard syntax.

Indicate an incoming private irc message with *, so you can respond in kind.

3.8.13

in imap standalone, n does not run off the end of the folder,
just as p does not back up off the end of the folder.

Support for gophers://

Support for .netrc through curl.

IRC actions.   /me

Mail forwarding.

mass global delete move copy in imap.
Send one command with the list of uids to the imap server instead of many.

Fix core dump due to a change in quickjs implementation of Promise jobs,
that took place on 06/28/2025.
This version of edbrowse now requires quickjs at or beyond this date.

Suppress many gcc warnings.

3.8.12

Make adjustments as quickjs evolves. Resolve build issues.

3.8.11

uc lc mc are internationalized, up to unicode 0xff.

Put explanatory files in the history directory.

    i? shows the url of the submit button.

Fix extremely rare race condition in caching.

$EB_SESSION, and set these whenever $(:X) is expanded.

Fix gopher search

commands: sss, test, p stuff.

3.8.10

toString shows the correct object classes.

Simplistic simulation of IntersectionObserver and ResizeObserver.
